 v6_ila.ngc                Locally Added               0 
 v6_icon.ngc               Locally Added               0 

Directory modules/bluespec/common/fpgaenv/physical-platform/ml605/aurora-pcie-dma
 ml605-v6-pcie-dma.bsv     Locally Modified          670 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/aurora/aurora-flowcontrol
 XUPV5_AURORA_SINGLE.bsv   Locally Modified          670 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/aurora/aurora-driver-simulation
 aurora-driver-simulation.bsv Locally Modified          670 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/aurora-sma-ml605
 aurora_8b10b_v5_3_example_design.v Locally Modified          670 
 aurora-ug.bsv             Locally Modified          670 
 aurora_8b10b_v5_3_example_design.ucf Locally Modified          670 


1) Added icon and ila ngcs.  These are the components of the chipscope
logic analyzer.  Currently, they are only used in xilinx-provided
verilog as a low-level debugging aide. However, this sort of global
resource is the kind of thing that is screaming for inclusion as a
soft-service.

2) Minor modifications and a flow control bug fix to the aurora flow
control layer.  The aurora link is quite stable now, and I have
sucessfully run a partitioned HAsim model on the ML605 setup. 


----------
mcadler     Date: Fri Feb  1 15:49:35 EST 2013  CSN: CSN-leap-platforms-672
                  Fri Feb  1 20:49:35 UTC 2013


Directory modules/bluespec/common/fpgaenv/fpga-components
 lutram.bsv                Locally Modified          671 

Sigh.  The bug that won't die.  On Virtex-7 Xst started putting 1-bit wide
LUTRAMs in block RAM despite the fact that a read on the cycle immediately
following a write to the same address returns stale data.

I had fixed (hacked around) this bug long ago for widths larger than 1 bit.
At the time it appeared Xst never did this with 1-bit data.